# RoonVis

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY.md
RoonVis/: CMakeLists.txt
RoonVis/ANGLEGenerated/: compression_utils_portable.h
RoonVis/ANGLEGenerated/angle/: ANGLEShaderProgramVersion.h  angle_commit.h
RoonVis/Resources/: HDCapabilityManifest.json  HDVerifiedPresets.json  LegacyNameMap.json  PresetBlocklist.json
RoonVis/Resources/PresetThumbnails/: thumbnail-manifest.json
RoonVis/Resources/preprocess-cache/: tier1-coverage.json
RoonVis/Resources/presets/: SOURCE.md
RoonVis/Sources/RoonVis/: ANGLEGLView+Controls.mm  ANGLEGLView+Diagnostics.mm  ANGLEGLView.h  ANGLEGLView.mm  ANGLEGLViewInternal.h  AppDelegate.mm  AudioOnsetDetector.cpp  AudioOnsetDetector.h  BrowseModal.swift  ComponentGallery.swift  Components.swift  DeviceTier.cpp  DeviceTier.h  EngineState.swift  Info.plist  LearnedSlowPresetStore.cpp  LearnedSlowPresetStore.h  LegacyNameMigration.cpp  LegacyNameMigration.h  LegacyNameMigrationSupport.h  LegacyNameMigrationSupport.mm  MilkdropTranspilePrep.cpp  MilkdropTranspilePrep.h  Overlays.swift  PRESET_VALIDATION.md  PreprocessCache.cpp  PreprocessCache.h  PreprocessCacheResource.cpp  PreprocessCacheResource.h  PresetBlocklist.cpp  PresetBlocklist.h  PresetBrowser.swift  PresetCapabilityManifest.cpp  PresetCapabilityManifest.h  PresetCompat.cpp  PresetCompat.h  PresetDwellPlan.cpp  PresetDwellPlan.h  PresetEligibilityPolicy.cpp  PresetEligibilityPolicy.h  (+58 more)
RoonVis/UITests/: RoonVisUITests.swift
RoonVis/UITests/RoonVisUITests.xcodeproj/: project.pbxproj
RoonVis/UITests/RoonVisUITests.xcodeproj/xcshareddata/xcschemes/: RoonVisUITests.xcscheme
RoonVis/cmake/: generate_angle_sources.py
RoonVis/patches/: angle-es3-legacy-gpu.patch  apply.sh  projectm-eval.patch  projectm.patch
RoonVis/scripts/: analyze_transition_profile.py  build-health.sh  build_cotc_pack.py  campaign-run.sh  cotc-pack-manifest.json  cotc-pack-report.json  generate_capability_manifest.py  guardrail-allowlist.txt  join_compat_burnin.py
RoonVis/tests/: AudioOnsetDetectorTests.cpp  DeviceTierTests.cpp  LearnedSlowPresetStoreTests.cpp  LegacyNameMigrationTests.cpp  LivePCMDelayBufferTests.cpp  ParseInputHashGen.cpp  PreprocessCacheGen.cpp  PreprocessCacheResourceTests.cpp  PreprocessCacheTests.cpp  PresetBlocklistTests.cpp  PresetCapabilityManifestTests.cpp  PresetCompatScan.cpp  PresetCompatTests.cpp  PresetDwellPlanTests.cpp  PresetEligibilityPolicyTests.cpp  PresetRotationCursorTests.cpp  PresetRotationSchedulerTests.cpp  PresetShelfModelTests.cpp  PresetWarmCacheTests.cpp  RotationEngineTests.cpp  ShaderBlobStoreTests.cpp  ShaderTranspileGolden.cpp  SnapPCMTests.cpp  SnapcastProjectMAudioProbe.cpp  TESTING.md  TestHarness.h
scripts/: pi-setup.sh
